Added global styles

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,18 @@
 
 		<link rel="stylesheet" href="https://use.typekit.net/fad7yrb.css" />
 
+		<style>
+			body {
+				font-family: "neue-haas-grotesk-display", sans-serif;
+				color: white;
+			}
+
+			::placeholder {
+				color: white;
+				opacity: 0.5;
+			}
+		</style>
+
 		<title>Rule of Life Generator</title>
 	</head>
 	<body>
