--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
 			body {
 				font-family: "neue-haas-grotesk-display", sans-serif;
 				color: white;
+				zoom: 1.25;
 			}
 
 			::placeholder {
