--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,11 @@
 			body {
 				font-family: "neue-haas-grotesk-display", sans-serif;
 				color: white;
-				zoom: 1.25;
+			}
+			@media screen and (min-width: 992px) {
+				body {
+					zoom: 1.25;
+				}
 			}
 
 			body.no-zoom {
