--- a/src/pages/Print-letter.html
+++ b/src/pages/Print-letter.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <style media="print" type="">
+        <style media="screen" type="">
             *{box-sizing: border-box;}
             @media print {
                 html, body {
@@ -51,8 +51,6 @@
             tr, td{
                 width: 100%;
                 border-top: 0.067mm solid rgba(0, 0, 0, 0.65);
-                font-family: "neue-haas-grotesk-display", sans-serif;
-                font-style: normal;
             }
             tr{
                 height: 7.15mm;
@@ -69,7 +67,8 @@
                 width: 37.56mm;
                 height: 7.15mm;
 
-                /* font-family: "neue-haas-grotesk-display", sans-serif; */
+                font-family: "neue-haas-grotesk-display", sans-serif;
+                font-style: normal;
                 font-weight: 300;
                 font-size: 6.35mm;
                 line-height: 7.15mm;
@@ -81,8 +80,8 @@
                 height: 9.53mm;
                 overflow: hidden;
 
-                /* font-family: "neue-haas-grotesk-display", sans-serif; */
-                /* font-style: normal; */
+                font-family: "neue-haas-grotesk-display", sans-serif;
+                font-style: normal;
                 font-weight: 500;
                 font-size: 3.71mm;
                 line-height: 4.77mm;
