--- a/src/pages/Print-letter.html
+++ b/src/pages/Print-letter.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <style media="screen" type="">
+        <style media="print" type="">
             *{box-sizing: border-box;}
             @media print {
                 html, body {
