Added more default styles

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,9 @@
 		<link rel="stylesheet" href="https://use.typekit.net/fad7yrb.css" />
 
 		<style>
-			body {
+			body,
+			input,
+			button {
 				font-family: "neue-haas-grotesk-display", sans-serif;
 				color: white;
 			}
